Fix broken layout in safari

--- a/app/styles/home-page.scss
+++ b/app/styles/home-page.scss
@@ -172,6 +172,7 @@
 
           text-transform: uppercase;
           font-weight: bold;
+          left: 0;
         }
 
         .scienceCalendar-scienceTag {
